--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,6 +8,23 @@ body
     padding: 0;
 }
 
+#cabecera
+{
+    background: #33A;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1cm;
+    font-weight: normal;
+    font-size: 12px;
+}
+
 #container
 {
     width: 70%;
