Logo más cambio color de fondo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #97969c;
     color: #333;
     text-align: center;
     font-family: Arial;
@@ -16,6 +17,12 @@ body
     font-weight: bold;
     margin: 0;
     padding: 0.5cm;
+}
+
+#cabecera #logo
+{
+    width: 55px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -37,4 +44,10 @@ body
 #container h1
 {
     font-size: 28px;
+}
+
+#post
+{
+    background: white;
+    padding: 1cm;
 }
