--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,3 +38,11 @@ body
 {
     font-size: 28px;
 }
+
+#footer
+{
+    background: #333;
+    color: #DDD;
+    text-align: center;
+    padding: 0.22cm;
+}
